objects/Delighted_API__mdt.object
<CustomObject>
    <fields>
        <fullName>API_Key__c</fullName>
        <label>API Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_URL__c</fullName>
        <label>Base URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_API_Key__c</fullName>
        <label>Project API Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Delighted API</label>
    <pluralLabel>Delighted API</pluralLabel>
</CustomObject>